Fix list overlapping @ 440px

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1426,8 +1426,13 @@ footer.global {
 /* --------- Full-width feature blocks --------- */
 .feature-list li, #interaction .feature-list li, #viewer .feature-list li  {
 	max-width: 100%; 
-	margin-top: 0; float: left; clear: both;
+	float: left; clear: both;
 }
+
+#interaction .feature-list li, #viewer .feature-list li {
+	margin-top: 0;
+}
+
 
 .feature-list li:nth-child(even), #interaction .feature-list li:nth-child(even), #viewer .feature-list li:nth-child(even) {
 	float: left;
@@ -1510,7 +1515,7 @@ section.mobile {
 	text-align: center;
 }
 
-.feature-list {
+.feature-list li {
 	margin-top: 0;
 }
 
